modify image and searchbar

--- a/memetab.html
+++ b/memetab.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     
-    <img src = "#" alt = "Meme" id = "meme_img"/>
+    <div class = "bodycontainer">
+        <img src = "#" alt = "Meme" id = "meme_img"/>
 
-    <form method="get" action="http://www.google.com/search">
-        <input type="text" name = "q" placeholder = "Search Google or type a URL">
-    </form>
-    
+
+        <form method="get" action="http://www.google.com/search" class = "form">
+            <input type="text" name = "q" placeholder = "Search Google or type a URL">
+        </form>
+    </div>
 
     <script src = "memetab.js"></script>
 </body>
