added search logo

--- a/memetab.html
+++ b/memetab.html
@@ -14,7 +14,7 @@
 
 
         <form method="get" action="http://www.google.com/search" class = "form">
-            <input type="text" name = "q" placeholder = "Search Google or type a URL">
+            <input type="text" name = "q" placeholder = "Search Google or type a URL" autocomplete="off">
         </form>
     </div>
 
