--- a/memetab.html
+++ b/memetab.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="memetab.css">
-    <link rel = "icon" href = "icons/icon.png" type = "image/x-icon">
+    <link rel = "icon" href = "icons/icon_adapt.png" type = "image/x-icon">
     <title>New Tab</title>
 </head>
 <body>
